--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ h1 {
   margin: 0 10px 0 10px;
   padding: 0;
   text-align: center;
+  color: #7304fb;
 }
 
 @media only screen and (max-width: 600px){
